Bug 161555 - Temporarily break customElements.whenDefined to remove flaky crashes
Summary: Temporarily break customElements.whenDefined to remove flaky crashes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords:
Depends on:
Blocks: 161545
  Show dependency treegraph
 
Reported: 2016-09-02 16:21 PDT by Ryosuke Niwa
Modified: 2016-09-02 16:33 PDT (History)
4 users (show)

See Also:


Attachments
Patch (5.79 KB, patch)
2016-09-02 16:24 PDT, Ryosuke Niwa
cdumez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2016-09-02 16:21:56 PDT
Do a partial rollout of r205315 to unbreak testing.
Comment 1 Ryosuke Niwa 2016-09-02 16:24:54 PDT
Created attachment 287832 [details]
Patch
Comment 2 Ryosuke Niwa 2016-09-02 16:26:54 PDT
Committed r205383: <http://trac.webkit.org/changeset/205383>