Temporarily break customElements.whenDefined to remove flaky crashes https://bugs.webkit.org/show_bug.cgi?id=161555

Reviewed by Chris Dumez.

Source/WebCore:

Remove HashMap of DeferredWrapper which causes a crash during destruction.
This breaks the semantics of "whenDefined" for now.

* bindings/js/JSCustomElementRegistryCustom.cpp:
(WebCore::whenDefinedPromise):
* dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::addElementDefinition):
* dom/CustomElementRegistry.h:
(WebCore::CustomElementRegistry::promiseMap): Deleted.

LayoutTests:

Rebaseline the test now that some test cases are failing due to the partial rollout.

* fast/custom-elements/CustomElementRegistry-expected.txt:


Canonical link: https://commits.webkit.org/179715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205383 268f45cc-cd09-0410-ab3c-d52691b4dbfc